<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewRequestActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/selectDate"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="120dp"
            android:text="@string/select_date"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/startDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:layout_marginStart="16dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/endDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:layout_marginStart="16dp"
            android:visibility="gone"/>



        <!--        <DatePicker-->
<!--            android:id="@+id/datePicker"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="400dp"-->
<!--            android:layout_margin="16dp"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_type"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:layout_margin="16dp"/>

        <Spinner
            android:id="@+id/requestTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/add_your_comment_here"
            android:textColorHint="@color/white"
            android:maxLines="5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:fontFamily="sans-serif-black"
                android:layout_marginEnd="40dp"/>

            <Button
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:layout_marginEnd="90dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

